<resources>
    <string name="app_name">BeenThere</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_share_fragment">Share your experience</string>
    <string name="hello_not_alone_fragment">You are not alone</string>
    <string name="hello_been_there_fragment">Have you been there?</string>
    <string name="hello_profile_fragment">Profile</string>
    <string name="enter_book_name">Enter Book name</string>
    <string name="books_search_hint">The book you\'re sharing</string>
    <string name="search_book">Search</string>
    <string name="share_description">Describe your situation &amp; how this book helped you</string>
    <string name="text_encounter">What did you encounter?</string>
    <string name="text_phrase">Which parts or phrases helped you?</string>
    <string name="btn_share">Share</string>


    <string name="error">Please input the info</string>

    <!--    FireStore-->
    <string name="user_id">user_id</string>
    <string name="title">title</string>
    <string name="author">author</string>
    <string name="situation">situation</string>
    <string name="phrases">phrases</string>


    <string name="share_success">You have shared your experience!</string>
    <string name="share_fail">Something went wrong</string>


    <!--    for open ai question-->
    <string name="check_category_string">Which one of the 6 types %1$s does the following description belong to:</string>


    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>

    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>

    <string name="pref_key_info_hide" translatable="false">ih</string>

    <string name="pref_key_enable_auto_zoom" translatable="false">eaz</string>

    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>

    <string name="pref_key_show_text_confidence" translatable="false">stc</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>

    <string name="select_image" translatable="false">Select image</string>

    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="close_recognizer">select\ntext</string>

    <string name="no_book_found">The book may not have been written</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_category">You\'re not alone\n\'cause we have\n been there</string>
    <string name="life_meaning">Life Meaning</string>
    <string name="explore_by_problem">EXPLORE BY PROBLEM</string>
    <string name="explore_explain">Explore these general issues to find books recommended by people who\'ve been there</string>
    <string name="communication">Communication</string>
    <string name="discipline">Discipline</string>
    <string name="learning">Learning</string>
    <string name="work">Work</string>
    <string name="relationship">Relationship</string>
    <string name="i_ve_been_there">I\'ve been there</string>
    <string name="tell_us_what_happened">Tell us what happened</string>
    <string name="share_your_experience">Share your experience</string>
    <string name="see_how_others_went_through_similar_problems">Click to see how others \nwent through similar problems</string>
    <string name="someone_might_have_been_there">Someone might have been there</string>
    <string name="pick_an_environment">Pick an environment</string>
    <string name="profile_text1">You\'ve shared\n30 experiences</string>
    <string name="name">Roland</string>
    <string name="profile_text_2">You\'ve read\n24 experiences</string>
    <string name="profile_text3">50 people\nlike your share</string>
    <string name="profile_text_liker">People who like your shares</string>
    <string name="profile_text_liker_description">Invite them to exchange your experiences</string>
    <string name="profile_text_to_talk">Someone is\ntalking about\nLife Meaning!</string>
    <string name="tell_us_your_situation">Tell us your situation</string>
    <string name="text_not_alone_1">Look for suggestion</string>
    <string name="text_been_there_1">Been there?\nShare your</string>
    <string name="text_been_there_2">with them</string>
    <string name="experience">Experience</string>
    <string name="text_dialog_1">Check these suggestions\nthat might suit your situation</string>
    <string name="launch_a_live_talk">Launch a live talk</string>
    <string name="send">Send</string>
    <string name="put_your_name">your name</string>
    <string name="someone_is_giving_a_live_talk">Someone is giving a live talk</string>
    <string name="join_the_ongoing_live_talks">Join the ongoing live talks!</string>
    <string name="text_forum">Thank you for sharing! I\'ve never thought that way!</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="example_text_advise">It\'s been a tough time for me to stay home and communicate with my family…</string>
    <string name="header_text_advise">Been there?\nYour experience could help!</string>
    <string name="quote_1">It took untold generations to get you where you are</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="profile">Profile</string>
    <string name="check_later_if_someone_is_giving_a_live_talk">Check later if someone is giving a\nLive Talk</string>
    <string name="tell_us">Tell us</string>
    <string name="what">What</string>
    <string name="your_situation">Your situation</string>
    <string name="happened">Happened</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="you_re_not_alone">You\'re not alone</string>
    <string name="you_can_take_photo">You can also take a photo</string>
    <string name="input_here">Input here</string>
    <string name="share_btn_dialog">Your experience is analyzed\nand categorized accordingly!</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="beenthere">BeenThere</string>
    <string name="enter">Enter</string>
    <string name="someone_might_have_nbeen_there">Someone might have\nBeen There</string>
    <string name="made_by_roland">Made by Roland</string>
    <string name="someone_might_have">Someone might have</string>
    <string name="live">\tLive</string>
    <string name="your_favorite_experiences">Your favorite experiences</string>
    <string name="say_something">Say something</string>

    <string name="no_internet">No internet connection</string>
    <string name="live_">Live</string>
    <string name="comments">Comments:\t</string>
    <string name="_5">5</string>


</resources>