<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.beenthere.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.HomeFragment"
        >

        <TextView
            android:id="@+id/text_explore_by_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/explore_by_problem"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="@id/text_explore_by_problem"
            app:layout_constraintStart_toStartOf="@id/text_explore_by_problem"
            app:layout_constraintTop_toBottomOf="@+id/text_explore_by_problem"/>

        <TextView
            android:id="@+id/text_explore_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textSize="14sp"
            android:text="@string/explore_explain"
            />


        <ImageView
            android:id="@+id/btn_to_meaning"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pic_meaning"
            app:layout_constraintTop_toBottomOf="@id/text_explore_explain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_to_communication"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_meaning"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_meaning"
            app:layout_constraintStart_toStartOf="@id/btn_to_meaning"
            app:layout_constraintEnd_toEndOf="@id/btn_to_meaning"
            />


        <ImageView
            android:id="@+id/btn_to_communication"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pic_communication"
            app:layout_constraintTop_toTopOf="@id/btn_to_meaning"
            app:layout_constraintStart_toEndOf="@id/btn_to_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_communication"
            app:layout_constraintStart_toStartOf="@id/btn_to_communication"
            app:layout_constraintEnd_toEndOf="@id/btn_to_communication"
            />

        <ImageView
            android:id="@+id/btn_to_discipline"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:src="@drawable/pic_discipline"
            app:layout_constraintTop_toBottomOf="@id/btn_to_meaning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_to_communication"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discipline"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_discipline"
            app:layout_constraintStart_toStartOf="@id/btn_to_discipline"
            app:layout_constraintEnd_toEndOf="@id/btn_to_discipline"
            />

        <ImageView
            android:id="@+id/btn_to_learning"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pic_learning"
            app:layout_constraintTop_toTopOf="@id/btn_to_discipline"
            app:layout_constraintStart_toEndOf="@id/btn_to_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learning"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_learning"
            app:layout_constraintStart_toStartOf="@id/btn_to_learning"
            app:layout_constraintEnd_toEndOf="@id/btn_to_learning"
            />

        <ImageView
            android:id="@+id/btn_to_work"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:src="@drawable/pic_work"
            app:layout_constraintTop_toBottomOf="@id/btn_to_discipline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_to_communication"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_work"
            app:layout_constraintStart_toStartOf="@id/btn_to_work"
            app:layout_constraintEnd_toEndOf="@id/btn_to_work"
            />

        <ImageView
            android:id="@+id/btn_to_relationship"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pic_relationship"
            app:layout_constraintTop_toTopOf="@id/btn_to_work"
            app:layout_constraintStart_toEndOf="@id/btn_to_meaning"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relationship"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:elevation="4dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_to_relationship"
            app:layout_constraintStart_toStartOf="@id/btn_to_relationship"
            app:layout_constraintEnd_toEndOf="@id/btn_to_relationship"
            />

        <TextView
            android:id="@+id/text_to_talk"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:elevation="4dp"
            android:gravity="center"
            android:lines="5"
            android:text="@string/launch_a_live_talk"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_to_relationship"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_frame"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_to_talk"
            >

            <EditText
                android:id="@+id/input_talk_theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_border"
                android:inputType="textMultiLine"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/btn_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@drawable/icon_streaming"
            android:backgroundTint="#c0c0c0"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="@id/text_to_talk"
            app:layout_constraintStart_toStartOf="@id/text_to_talk"
            app:layout_constraintTop_toBottomOf="@id/edit_frame" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>