<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.beenthere.share.ShareViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".share.ShareFragment">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/hello_share_fragment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorErrorContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title">

            <EditText
                android:id="@+id/edit_input_book"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/coupon_background"
                android:hint="@string/books_search_hint"
                android:letterSpacing="0.15"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_search"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/edit_input_book"
                app:layout_constraintStart_toEndOf="@id/edit_input_book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/edit_input_book"
                android:background="@drawable/button_background"
                android:text="@string/search_book"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/book_image_result"
            android:layout_width="80dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:scaleType="center"
            android:cropToPadding="true"
            app:imageUrl="@{viewModel.bookImage}"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/search_block"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/book_title_result"

            />

        <TextView
            android:id="@+id/book_title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.bookTitle}"
            tools:text="Title"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/book_image_result"
            app:layout_constraintTop_toBottomOf="@id/search_block"
            app:layout_constraintBottom_toTopOf="@id/author_name_result"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/author_name_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.bookAuthor}"
            android:layout_marginTop="16dp"
            tools:text="Author"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/book_title_result"
            app:layout_constraintTop_toBottomOf="@id/book_title_result"
            app:layout_constraintBottom_toBottomOf="@id/book_image_result"

            />

        <TextView
            android:id="@+id/text_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/book_image_result"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/share_description"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>