<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.beenthere.beenthere.BeenThereViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".beenthere.BeenThereFragment">


        <TextView
            android:id="@+id/header_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:lines="2"
            android:text="@string/text_been_there_1"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <TextView
            android:id="@+id/text_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/experience"
            android:textColor="#ae563f"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/last_text"
            app:layout_constraintEnd_toEndOf="@id/header_title_1"
            app:layout_constraintTop_toBottomOf="@id/header_title_1" />

        <TextView
            android:id="@+id/last_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/text_been_there_2"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/header_title_1"
            app:layout_constraintTop_toBottomOf="@id/text_exp"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/pic_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="w, 1.2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/pic_walk_alone_2_2"

                />

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_situation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pic_frame" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <ImageView
                android:id="@+id/btn_add"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#77574e"
                android:padding="8dp"
                android:elevation="4dp"
                android:src="@drawable/icon_add" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>